api gateway full of errors
